# dash-cpp

./: .gitignore  README.md  doxy-config
Bolt_Dash/: Bolt_Dash.qmlproject  Bolt_Dash.qmlproject.qtds  Bolt_Dash.qmlproject.qtds.7f90998  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.a52b809  CMakeLists.txt.user.b1a2973  backend.cpp  backend.h  can.cpp  can.h  constants.h  gpsprocessing.cpp  gpsprocessing.h  main.qml  nmea_decoder.cpp  nmea_decoder.h  qmlmodules  web.cpp  web.h
Bolt_Dash/content/: App.qml  BMSFaultDetails.qml  BatteryReadout.qml  BatterySlider.qml  BikeStatus.qml  BoltLeanAngle.qml  BoltLeanAngle.qml.autosave  CMakeLists.txt  Debug1.qml  DebugItem1.ui.qml  DebugMain.qml  DebugOther.qml  FaultMotorStatus.qml  FullSlider.qml  Screen01.ui.qml  Speedometer.qml  Speedometer.qml.autosave  SpeedometerDecorations.qml  TempSlider.qml  TemperatureIsland.qml
Bolt_Dash/content/DebugHelpers/: DebugBMS.qml  DebugMotor.qml  DebugPDU.qml
Bolt_Dash/imports/: CMakeLists.txt
Bolt_Dash/imports/Backend/: CMakeLists.txt  backend.cpp  backend.h  can.cpp  can.h
Bolt_Dash/imports/Bolt_Dash/: CMakeLists.txt  Constants.qml  backend.cpp  backend.h  can.cpp  qmldir
Bolt_Dash/imports/Bolt_Dash/designer/: plugin.metainfo
Bolt_Dash/imports/IO/: CMakeLists.txt  io.cpp  io.h
Bolt_Dash/src/: import_qml_plugins.h  main.cpp
docs/: annotated.html  annotated_dup.js  backend_8h_source.html  can_8h_source.html  class_backend-members.html  class_backend.html  class_backend.js  classes.html  constants_8h_source.html  dir_9003ff251f894a0ca67807a78c4dd8f8.html  files.html  (+20 more)
(+22 files in other folders)
